manifests/seraphim/prod/gitlab/TCPRoute-gitlab-gitlab-shell.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  annotations: {}
  labels:
    app: gitlab-shell
    chart: gitlab-shell-9.8.2
    heritage: Helm
    release: gitlab
  name: gitlab-gitlab-shell
  namespace: gitlab
spec:
  parentRefs:
    - name: gitlab-gw
      sectionName: gitlab-ssh
  rules:
    - backendRefs:
        - name: gitlab-gitlab-shell
          port: 22
